--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -1,12 +1,12 @@
-rex_emailobfuscator_title = Emailverschlüsselung
+rex_emailobfuscator_title = Email-Verschlüsselung
 
-#subpage config
 rex_emailobfuscator_config = Konfiguration
-rex_emailobfuscator_config_action_save = Speichern
-rex_emailobfuscator_config_articles = Artikel ausschliessen
-rex_emailobfuscator_config_templates = Templates ausschliessen
-rex_emailobfuscator_config_saved = Einstellungen wurden gespeichert!
-
-#subpage help
-rex_emailobfuscator_help_infotext1 = Dieses kleine aber praktische AddOn "verschüsselt" Emailadressen (als Links oder Plain) im Quelltext und "entschlüsselt" sie wieder via Javascript.
-rex_emailobfuscator_help_infotext2 = Benötigt wird dafür ein CSS Snippet zur Darstellung und eine Javascriptfunktion zur entschlüsselung. Beide Files werden mit diesem AddOn mitgeliefert und sollten wie nachfolgend eingebunden werden. Grundsätzlich kann man die Inhalte der beiden Files auch in eigene Files kopieren, jedoch müsste man dann die Files im Falle eines AddOn-Updates manuell anpassen.
+rex_emailobfuscator_config_saved = Konfiguration gespeichert.
+rex_emailobfuscator_config_assets = Assets
+rex_emailobfuscator_config_load_assets = Scripte und Styles laden
+rex_emailobfuscator_config_assets_js = JavaScript automatisch laden
+rex_emailobfuscator_config_assets_css = CSS automatisch laden
+rex_emailobfuscator_config_assets_note = Assets können manuell im Template eingebunden werden, falls dies nicht automatisch passieren soll. Zudem ist es auch möglich, die mitgelieferten Styles und Scripte des Addons in deine bereits vorhandene Sourcen einzubetten, dann aber müssen sie im Fall eines Addon-Updates von dir nachträglich angepasst werden.<br>Ausführliche Informationen und Code-Beispiele findest du auf der <a href="{0}">Hilfeseite des Addons</a>.
+rex_emailobfuscator_config_whitelist = Ausnahmen
+rex_emailobfuscator_config_articles = Artikel ausschließen
+rex_emailobfuscator_config_templates = Templates ausschließen
