--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -2,6 +2,13 @@ emailobfuscator_title = Email-Verschlüsselung
 
 emailobfuscator_config = Konfiguration
 emailobfuscator_config_saved = Konfiguration gespeichert.
+emailobfuscator_config_methods = Methoden
+emailobfuscator_config_select_method = Verschlüsselungsmethode
+emailobfuscator_config_select_method_css = CSS Methode ohne JavaScript (entfernt Link und verwandelt Adresse in name[at]domain.tld)
+emailobfuscator_config_select_method_rot13 = ROT13 JavaScript Verschlüsselung
+emailobfuscator_config_select_method_rot13_css = ROT13 JavaScript Verschlüsselung mit CSS Methode falls JavaScript deaktiviert ist
+emailobfuscator_config_select_method_unicorn = ROT13 Einhorn-Markup (Standard, benötigt JQuery)
+emailobfuscator-config-method
 emailobfuscator_config_assets = Assets
 emailobfuscator_config_load_assets = Scripte und Styles laden
 emailobfuscator_config_assets_js = JavaScript automatisch laden
